# defold-mcp

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: agents.rs  lib.rs  main.rs  server.rs
desktop/ui/: index.html  main.js  styles.css
src/: constants.ts  context.ts  http.ts  index.ts  state.ts
src/services/: bob.ts  editor.ts  engine.ts  processes.ts  refdoc.ts  screenshot.ts  templates.ts  toolchain.ts
src/tools/: build.ts  docs.ts  editor.ts  engine.ts  project.ts  resources.ts  run.ts  screenshot.ts  shared.ts
src/util/: errors.ts  fswalk.ts  http.ts  ini.ts  log.ts  protobuf.ts  textproto.ts
test/: evaluation.xml  http.test.mjs  live-smoke.mjs  server.test.mjs  unit.test.mjs
test/fixture/: game.project
test/fixture/main/: main.collection  main.script  player.go  player.script  utils.lua
